--- a/css/piano.css
+++ b/css/piano.css
@@ -14,72 +14,12 @@ body { font-family: Helvetica; color: rgb(32,32,32); padding: 10px;
   background-image:
   repeating-linear-gradient(120deg, rgba(255,255,255,.1), rgba(255,255,255,.1) 1px, transparent 1px, transparent 60px),
   repeating-linear-gradient(60deg, rgba(255,255,255,.1), rgba(255,255,255,.1) 1px, transparent 1px, transparent 60px),
-  linear-gradient(60deg, rgba(0,0,0,.1) 25%, transparent 25%, transparent 75%, rgba(0,0,0,.1) 75%, rgba(0,0,0,.1)),
-  linear-gradient(120deg, rgba(0,0,0,.1) 25%, transparent 25%, transparent 75%, rgba(0,0,0,.1) 75%, rgba(0,0,0,.1));
+  linear-gradient(60deg, rgb(224, 245, 250) 25%, transparent 25%, transparent 75%, rgba(224, 245, 250) 75%, rgba(224, 245, 250)),
+  linear-gradient(120deg, rgba(224, 245, 250) 25%, transparent 25%, transparent 75%, rgba(224, 245, 250) 75%, rgba(224, 245, 250));
   background-size: 70px 120px; }
   
-  .custom-select {
-  position: relative;
-  font-family: Arial;
-  margin:auto;
-  }
-  
-  .custom-select select {
-  display: none; /*hide original SELECT element:*/
-  }
-  
-  .select-selected {
-  background-color: #07294a;
-  }
-  
-  /*style the arrow inside the select element:*/
-  .select-selected:after {
-  position: absolute;
-  content: "";
-  top: 14px;
-  right: 10px;
-  width: 0;
-  height: 0;
-  border: 6px solid transparent;
-  border-color: #fff transparent transparent transparent;
-  }
-  
-  /*point the arrow upwards when the select box is open (active):*/
-  .select-selected.select-arrow-active:after {
-  border-color: transparent transparent #fff transparent;
-  top: 7px;
-  }
-  
-  /*style the items (options), including the selected item:*/
-  .select-items div,.select-selected {
-  color: #ffffff;
-  padding: 8px 16px;
-  border: 1px solid transparent;
-  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
-  cursor: pointer;
-  user-select: none;
-  }
-  
-  /*style items (options):*/
-  .select-items {
-  position: absolute;
-  background-color: #02172b;
-  top: 100%;
-  left: 0;
-  right: 0;
-  z-index: 99;
-  }
-  
-  /*hide the items when the select box is closed:*/
-  .select-hide {
-  display: none;
-  }
-  
-  .select-items div:hover, .same-as-selected {
-  background-color: rgba(0, 0, 0, 0.1);
-  }
-  
-  
+
+
   
   b { font-weight: bold; }
   
@@ -109,30 +49,47 @@ body { font-family: Helvetica; color: rgb(32,32,32); padding: 10px;
   
   .small { font-size: 20px; }
   
-  .keyboard-options { margin: 10px auto; width: auto; text-align: center; font-size: 12px; font-weight: 200; padding:10px; }
+  .keyboard-options { margin: 10px auto; 
+    width: 830px; 
+    text-align: center; 
+    font-size: 11px; 
+    -webkit-text-fill-color: #fff;
+    font-weight: 200; 
+    padding:10px; 
+    background:
+    radial-gradient(black 15%, transparent 16%) 0 0,
+    radial-gradient(black 15%, transparent 16%) 8px 8px,
+    radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+    radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
+    background-color:#282828;
+    background-size:16px 16px;
+    border-radius: 20px;
+    overflow: hidden;
+  }
   
   .keyboard-holder {
     margin: 10px auto;
-    width: 640px;
-     height: 200px;
-     position:relative;
-     user-select:none;
-     -webkit-user-select:none;
-     -moz-user-select:none;
-     -o-user-select:none;
-     background:
-     radial-gradient(black 15%, transparent 16%) 0 0,
-     radial-gradient(black 15%, transparent 16%) 8px 8px,
-     radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
-     radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
-     background-color:#282828;
-     background-size:16px 16px;
-     border-radius: 20px;
+  width: 640px;
+   height: 250px;
+   position:relative;
+   user-select:none;
+   -webkit-user-select:none;
+   -moz-user-select:none;
+   -o-user-select:none;
+   background:
+   radial-gradient(black 15%, transparent 16%) 0 0,
+   radial-gradient(black 15%, transparent 16%) 8px 8px,
+   radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+   radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
+   background-color:#282828;
+   background-size:16px 16px;
+   border-radius: 20px;
+   overflow: hidden;
    }
   .image { border: 1px solid rgba(32,32,32,0.2); color: rgb(32,32,32); font-family: Courier New, Courier, monospace; font-size: 12px; white-space:pre; padding: 10px; margin: 10px; text-align: center; }
   
   .pann{
-    width: auto;
+    width: 830px;
     margin: 10px auto;
     border-radius: 20px;
     background:
@@ -153,8 +110,9 @@ body { font-family: Helvetica; color: rgb(32,32,32); padding: 10px;
   }
   .pann label{
     color: #fff;
-    font-size: 10px;
+    font-size: 14px;
     letter-spacing: 0.5;
+    width: 55px;
   }
   .pann-mid{
     display:flex;
@@ -163,52 +121,11 @@ body { font-family: Helvetica; color: rgb(32,32,32); padding: 10px;
       flex-direction: row;
       align-items: center;
       justify-content: space-around;
+      width: inherit;
   }
-  /* ************************************************************************************************************************ */
-  /* ************************************************************************************************************************ */
-  /* ************************************************************************************************************************ */
-  /* ************************************************************************************************************************ */
-  /* ************************************************************************************************************************ */
-  /* ************************************************************************************************************************ */
-  /* ************************************************************************************************************************ */
-  /* ************************************************************************************************************************ */
-  
-  .slider {
-    -webkit-appearance: none;
-    width: 300px;
-    height: 10px;
-    border-radius: 5px;
-    background: #d3d3d3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-    margin: 12px;
+  .slider{
+    width: 500px;
   }
-  
-  .slider:hover {
-    opacity: 1;
-  }
-  
-  .slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 23px;
-    height: 24px;
-    border: 0;
-    background: url('vm.png');
-    cursor: pointer;
-  }
-  
-  .slider::-moz-range-thumb {
-    width: 23px;
-    height: 24px;
-    border: 0;
-    background: url('vm.png');
-    cursor: pointer;
-  }
-  
-  
   /* ************************************************************************************************************************ */
   /* ************************************************************************************************************************ */
   /* ************************************************************************************************************************ */
