--- a/css/esrealtime.css
+++ b/css/esrealtime.css
@@ -21,7 +21,13 @@ flex-direction: row;
     display: flex;
     flex-direction: row-reverse;
 }
+.interlvl5{
+    display: flex;
+flex-direction: row;
+justify-content: center;
 
+
+}
 
 
 input {
