--- a/css/esimgpr.css
+++ b/css/esimgpr.css
@@ -13,10 +13,44 @@ flex-direction: row;
 	
 }
 .intersetclr{
-    width: auto;
+    width: 250px;
     height: 100px;
-    border-radius: 20px;
+    border-radius: 5px;
     border-style: solid;
-    border-width: 2px;
-    border-color: blue;
+    border-width: 1px;
+    border-color: rgb(175, 190, 175);
 }
+.inttvv{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+}
+.inttvv2{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-end;
+}
+.inttvv3{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-content: stretch;
+    margin-left: 30px;
+    margin-right: 30px;
+ 
+ }
+ .inttvv4{
+    border-radius: 10px;
+    border-style: inset;
+    border-width: 1px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-content: stretch;
+    margin-top: 30px;
+    margin-bottom: 50px;
+ 
+ }
