--- a/css/esmem.css
+++ b/css/esmem.css
@@ -10,3 +10,114 @@
     flex-wrap: wrap;
     align-items: flex-end;
 }
+.esmemlvl{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.tilessty {
+    
+    width: 200px;
+    height: 200px;
+    border-radius: 5px;
+    margin: 1px;
+    border-style: inset;
+    border-width: 1px;
+    border-color: forestgreen;
+    
+
+    -webkit-perspective: 600px;
+            perspective: 600px;
+  }
+  /* -- make sure to declare a default for every property that you want animated -- */
+  /* -- general styles, including Y axis rotation -- */
+  .tilessty .front {
+    float: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 900;
+    width: inherit;
+    height: inherit;
+    border: 1px solid #ccc;
+    background: #ffffff;
+    text-align: center;
+    box-shadow: 0 1px 5px rgba(0,0,0,0.9);
+
+    -webkit-transform: rotateX(0) rotateY(0);
+            transform: rotateX(0) rotateY(0);
+
+    -webkit-transform-style: preserve-3d;
+            transform-style: preserve-3d;
+
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+
+    /* -- transition is the magic sauce for animation -- */
+    -webkit-transition: all .4s ease-in-out;
+            transition: all .4s ease-in-out;
+  }
+  .tilessty.flip .front {
+    z-index: 900;
+    border-color: #eee;
+    background: #ffffff;
+    box-shadow: 0 15px 50px rgba(0,0,0,0.2);
+
+    -webkit-transform: rotateY(179deg);
+            transform: rotateY(179deg);
+  }
+
+  .tilessty .back {
+    float: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 800;
+    width: inherit;
+    height: inherit;
+    border: 1px solid #ccc;
+    background: #ffffff;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.6);
+
+    -webkit-transform: rotateY(-179deg);
+            transform: rotateY(-179deg);
+
+    -webkit-transform-style: preserve-3d;
+            transform-style: preserve-3d;
+
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+
+    /* -- transition is the magic sauce for animation -- */
+    -webkit-transition: all .4s ease-in-out;
+            transition: all .4s ease-in-out;
+  }
+
+  .tilessty.flip .back {
+    z-index: 1000;
+    background: #ffffff;
+
+    -webkit-transform: rotateX(0) rotateY(0);
+            transform: rotateX(0) rotateY(0);
+
+    box-shadow: 0 15px 50px rgba(0,0,0,0.2);
+  }
+  .click .front {
+    cursor: pointer;
+    -webkit-transform: rotateX(0);
+            transform: rotateX(0);
+  }
+  .click.flip .front {
+    -webkit-transform: rotateX(180deg);
+            transform: rotateX(180deg);
+  }
+  .click .back {
+    cursor: pointer;
+    -webkit-transform: rotateX(-180deg);
+            transform: rotateX(-180deg);
+  }
+  .click.flip .back {
+    -webkit-transform: rotateX(0);
+            transform: rotateX(0);
+  }
