--- a/css/templatemo-topic-listing.css
+++ b/css/templatemo-topic-listing.css
@@ -556,9 +556,13 @@ strong {
 .custom-block-image {
   display: block;
   width: 100%;
-  height: 200px;
+  height: 250px;
   object-fit: cover;
   margin-top: 35px;
+  border-radius: 5px;
+  border-style: solid;
+  border-color: #13547a;
+  border-width: 1px;
 }
 
 .custom-block .rounded-pill {
