--- a/esArtString/css/esartstr.css
+++ b/esArtString/css/esartstr.css
@@ -43,6 +43,7 @@ body{
     padding: 8px;
     border-radius: 5px;
     margin: 20px;
+    width: 180px;
     
 }
 .topframe h1 {
@@ -63,7 +64,7 @@ body{
 .intcard1{
     border-radius: 5px;
     width:-webkit-fill-available;
-    background-color: rgb(231 252 255);
+    background-color: rgb(194 241 247);
     overflow: hidden;
     margin: 10px;
     padding: 8px;
@@ -84,10 +85,32 @@ body{
     align-items: center;
     justify-content: flex-start;
     width:-webkit-fill-available;
+    overflow: scroll;
     
 }
+.intcard3{
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    width:-webkit-fill-available;
+    overflow: scroll;
+    align-items: center;
+}
+.tilessty{
+    border: none;
+    margin: 0;
+    padding: 0;
+    width: 5px;
+    height: 5px;
 
-
+}
+.rowdives{
+    border: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+}
 @media screen and (max-width: 600px) {
     .topframe {
         top: 2%;
